[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/wave_designer/synth_designer/synth_designer.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/spin_bar.gd" type="Script" id=2]

[node name="SynthDesigner" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="Info" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="HBC" type="HBoxContainer" parent="Info"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 31.0
custom_constants/separation = 4

[node name="LabelName" type="Label" parent="Info/HBC" groups=["Label"]]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Name"

[node name="S2" type="ReferenceRect" parent="Info/HBC"]
margin_left = 42.0
margin_right = 50.0
margin_bottom = 24.0
rect_min_size = Vector2( 8, 0 )

[node name="Name" type="LineEdit" parent="Info/HBC"]
margin_left = 54.0
margin_right = 310.0
margin_bottom = 24.0
rect_min_size = Vector2( 256, 0 )

[node name="S" type="ReferenceRect" parent="Info/HBC"]
margin_left = 314.0
margin_right = 338.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 0 )

[node name="LabelSize" type="Label" parent="Info/HBC" groups=["Label"]]
margin_left = 342.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 19.0
text = "Size"

[node name="S3" type="ReferenceRect" parent="Info/HBC"]
margin_left = 372.0
margin_right = 380.0
margin_bottom = 24.0
rect_min_size = Vector2( 8, 0 )

[node name="Size" type="ProgressBar" parent="Info/HBC"]
margin_left = 384.0
margin_top = 5.0
margin_right = 512.0
margin_bottom = 19.0
rect_min_size = Vector2( 128, 14 )
size_flags_vertical = 4
min_value = 4.0
max_value = 16.0
step = 1.0
value = 4.0
percent_visible = false
script = ExtResource( 2 )
big_step = 1.0
huge_step = 1.0

[node name="LabelSizeSamples" type="Label" parent="Info/HBC"]
margin_left = 516.0
margin_top = 5.0
margin_right = 582.0
margin_bottom = 19.0
text = "0 samples"

[node name="Designer" type="PanelContainer" parent="."]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SC" type="ScrollContainer" parent="Designer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Components" type="HBoxContainer" parent="Designer/SC"]
margin_right = 20.0
margin_bottom = 548.0
size_flags_vertical = 3

[node name="New" type="MenuButton" parent="Designer/SC/Components"]
margin_top = 264.0
margin_right = 20.0
margin_bottom = 284.0
size_flags_vertical = 4
toggle_mode = false
text = "+"
flat = false

[connection signal="text_changed" from="Info/HBC/Name" to="." method="_on_Name_changed"]
[connection signal="value_changed" from="Info/HBC/Size" to="." method="_on_Size_changed"]
